# oplang

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE.txt  README.md  cabal.project.local  hie.yaml  oplang.cabal  oplangc.cabal  package.yaml  stack.yaml
Examples/: HelloWorld.bf
Samples/: Add.op  Cba.op  Comment.op  DeadCode.op  Factorial.op  HelloTco.op  HelloWorld.bf  LostKingdom.bf  Peek.op  Rec.op  SO.op  Stack.op  StackTest.op  Triangle.bf  Undef.op
examples/: Factorial.op  LostKingdom.bf  Print.op  SO.op  factorial.op  triangle.bf
examples/errors/: both.op  errors.op  warnings.op
src/: AST.hs  Ast.hs  Checker.hs  Codegen.hs  Comp.hs  Main.hs  Optimizer.hs  Opts.hs  Parser.hs  Utils.hs
src/Codegen/: C.hs  LLVM.hs
src/Control/Monad/: Comp.hs
src/Data/: Opts.hs
src/Language/OpLang/: AST.hs  Checker.hs  Codegen.hs  Comp.hs  CompT.hs  IR.hs  Optimize.hs  Optimizer.hs  Opts.hs  Parse.hs  Parser.hs  Syntax.hs  Validate.hs  Validation.hs
src/Language/OpLang/Codegen/: C.hs  LLVM.hs
