cabal-version:       >=2.0

name:                oplang
version:             0.1.0.0
synopsis:            Compiler for OpLang, an esoteric programming language
description:         Please see the README on GitHub at <https://github.com/aionescu/oplang#readme>
homepage:            https://github.com/aionescu/oplang#readme
bug-reports:         https://github.com/aionescu/oplang/issues
license:             MIT
license-file:        LICENSE.txt
author:              Alex Ionescu
maintainer:          alxi.2001@gmail.com
copyright:           Copyright (C) 2019-2020 Alex Ionescu
category:            Compiler
build-type:          Simple
extra-source-files:  README.md

source-repository head
  type: git
  location: https://github.com/aionescu/oplang

executable oplang
  main-is: Main.hs

  other-modules:
    Language.OpLang.AST
    Language.OpLang.Checker
    Language.OpLang.Codegen.C
    Language.OpLang.Codegen.LLVM
    Language.OpLang.Optimizer
    Language.OpLang.Opts
    Language.OpLang.Parser
    Paths_oplang

  hs-source-dirs: src

  build-depends:
    base ^>=4.13
    , directory
    , filepath
    , optparse-applicative
    , parsec
    , process
    , text
    , text-builder
    , unordered-containers

  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2 -Wall -Wincomplete-uni-patterns

  default-extensions:
    ApplicativeDo
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
  
  default-language: Haskell2010
