cabal-version: 3.6

name: oplang
version: 0.1.0.0
synopsis: Compiler for OpLang, an esoteric programming language
description: Please see the README on GitHub at <https://github.com/aionescu/oplang#readme>
homepage: https://github.com/aionescu/oplang#readme
bug-reports: https://github.com/aionescu/oplang/issues
license: GPL-3.0-only
license-file: LICENSE.txt
author: Alex Ionescu
maintainer: alxi.2001@gmail.com
copyright: Copyright (C) 2019-2021 Alex Ionescu
category: Compiler
build-type: Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/aionescu/oplang

executable oplang
  main-is: Main.hs

  other-modules:
    Language.OpLang.IR
    Language.OpLang.Parser
    Language.OpLang.Checker
    Language.OpLang.Optimizer
    Language.OpLang.Codegen.C
    Opts

  hs-source-dirs: src

  build-depends:
    base >=4.14 && <5
    , containers ^>= 0.6.2
    , directory ^>= 1.3.6
    , filepath ^>= 1.4.2
    , optparse-applicative ^>= 0.16
    , process ^>= 1.6.9
    , parsec ^>= 3.1.14
    , text ^>= 1.2.4
    , text-builder ^>= 0.6.6

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wincomplete-uni-patterns
    -Wprepositive-qualified-module
    -Wunused-packages

  default-extensions:
    ApplicativeDo
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedLists
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns

  default-language: Haskell2010
